<resources>
    <string name="app_name">Alaska</string>

    <string name="title_journal">Journal</string>
    <string name="title_chat">Chat</string>
    <string name="title_discover">Discover</string>
    <string name="title_profile">Profile</string>
    <string name="title_username">Username</string>
    <string name="title_email">Email</string>
    <string name="title_mood_img_url">mood/mood_%s.png</string>
    <string name="title_tone_img_url">tone/tone_%s.png</string>
    <string name="title_twitter">Twitter Sentiment Analysis</string>
    <string name="title_podcast">Podcast</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location">Location</string>
    <string name="title_relaxing_playlist">CALM YOUR ANXIOUS MIND</string>
    <string name="title_inspirational_playlist">INSPIRATIONAL PODCASTS</string>
    <string name="title_piano_playlist">PEACEFUL PIANO</string>

    <string name="prompt_lorem_ipsum">Lorem ipsum dolor sit amet, soluta regione urbanitas vis in, qui elit populo ut.</string>
    <string name="prompt_user_input">Please enter your query here</string>
    <string name="prompt_add_journal">NO ENTRIES \n Add them now!</string>
    <string name="prompt_journal_date">dd/MM/yyyy</string>
    <string name="prompt_journal_intro">HOW ARE YOU FEELING?</string>
    <string name="prompt_journal_mood">Mood</string>
    <string name="prompt_journal_title">Title</string>
    <string name="prompt_journal_description">Description</string>
    <string name="prompt_journal_img">Image</string>
    <string name="prompt_twitter">Analyze your tweets and classify them into the following emotions: Anger, Fear, Joy, Sadness, Analytical, Confident and Tentative.</string>
    <string name="prompt_twitter_username">TWITTER USERNAME</string>
    <string name="prompt_twitter_mood">EMOTION DETECTED: %s</string>
    <string name="prompt_podcast">Podcasts/Playlist Recommendation</string>
    <string name="prompt_spotify">Need a distraction? Here are some podcasts and playlists just for you.</string>
    <string name="prompt_location">Location Detection</string>
    <string name="prompt_hospital">Click to find your nearest hospital health centre, GP and more.</string>
    <string name="prompt_navigation">Start navigation to %s, %s?</string>
    <string name="prompt_location_permission">Need permission to find your nearest hospital, health centre, GP and more.</string>
    <string name="prompt_audio">Audio Recording</string>
    <string name="prompt_audio_permission">Need permission to record audio for Speech-To-Text feature.</string>

    <string name="action_logout">Logout</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_add_entry">Add Journal Entry</string>
    <string name="action_edit_entry">Edit Entry</string>
    <string name="action_delete_entry">Delete Entry</string>
    <string name="action_mood_angry">Angry</string>
    <string name="action_mood_anxious">Anxious</string>
    <string name="action_mood_joyful">Joyful</string>
    <string name="action_mood_neutral">Neutral</string>
    <string name="action_mood_sad">Sad</string>
    <string name="action_twitter_connect">Connect To Twitter</string>
    <string name="action_twitter_analyze">Analyze Your Tweets</string>
    <string name="action_understand">OK, I understand</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>

    <string name="message_permission_denied">Permission to %s denied.</string>
    <string name="message_permission_granted">Permission to %s granted.</string>
    <string name="message_error">%s has occurred - please try again later.</string>
    <string name="message_action_failure">Failed to %s - please try again later.</string>
    <string name="message_action_success">%s successfully!</string>
    <string name="message_authentication_error">Failed to authenticate user - please login.</string>
    <string name="message_tap_voice">Touch and hold a message to enable TTS service.</string>
    <string name="message_chat_error">Unhandled message type.</string>
    <string name="message_listening_started">Listening - click to stop.</string>
    <string name="message_listening_stopped">Stopped listening.</string>
    <string name="message_input_empty">Please fill in all required fields.</string>
    <string name="message_tweet_empty">Sorry, user has not tweeted anything yet.</string>
    <string name="message_location_error">Invalid location.</string>
    <string name="message_location_empty">Please select a different address.</string>
    <string name="message_hospital_empty">No nearby hospitals.</string>
    <string name="message_spotify_connection_success">Connected to Spotify API.</string>
</resources>
