<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ie.tudublin.alaska.activities.journal.JournalFragment"
        android:label="@string/title_journal"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="ie.tudublin.alaska.activities.chat.ChatFragment"
        android:label="@string/title_chat"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout="@layout/fragment_chat">

        <action
            android:id="@+id/redirect_profile"
            app:destination="@id/navigation_profile" />

        <action
            android:id="@+id/redirect_dashboard"
            app:destination="@id/navigation_dashboard" />

        <action
            android:id="@+id/redirect_discover"
            app:destination="@id/navigation_discover" />
    </fragment>

    <fragment
        android:id="@+id/navigation_discover"
        android:name="ie.tudublin.alaska.activities.discover.DiscoverFragment"
        android:label="@string/title_discover"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ie.tudublin.alaska.activities.profile.ProfileFragment"
        android:label="@string/title_profile"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout="@layout/fragment_profile" />
</navigation>