<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/journal_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingBottom="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ProgressBar
        android:id="@+id/journal_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/journal_date_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_journal_date"
            android:textSize="@dimen/font_primaryText"
            android:inputType="date"
            android:drawableStart="@drawable/icon_calendar"
            android:drawablePadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journal_intro_text"
            app:layout_constraintVertical_bias="0.100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/journal_date_edit">

            <LinearLayout
                android:id="@+id/journal_joyful"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/journal_joyful_img"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mood_joyful" />

                <TextView
                    android:id="@+id/journal_joyful_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/action_mood_joyful"
                    android:textSize="@dimen/font_secondaryText"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/journal_neutral"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/journal_neutral_img"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mood_neutral" />

                <TextView
                    android:id="@+id/journal_neutral_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/action_mood_neutral"
                    android:textSize="@dimen/font_secondaryText"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/journal_sad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/journal_sad_img"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mood_sad" />

                <TextView
                    android:id="@+id/journal_sad_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/action_mood_sad"
                    android:textSize="@dimen/font_secondaryText"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/journal_anxious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/journal_anxious_img"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mood_anxious" />

                <TextView
                    android:id="@+id/journal_anxious_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/action_mood_anxious"
                    android:textSize="@dimen/font_secondaryText"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/journal_angry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/journal_angry_img"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mood_angry" />

                <TextView
                    android:id="@+id/journal_angry_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/action_mood_angry"
                    android:textSize="@dimen/font_secondaryText"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/journal_intro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_journal_intro"
            android:textAlignment="center"
            android:textSize="@dimen/font_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:background="#5D5D5D" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/journal_mood_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/prompt_journal_mood"
                android:textAllCaps="true"
                android:textSize="@dimen/font_secondaryText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/journal_mood_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:lines="2"
                android:background="#E9E9E9"
                android:textColor="@color/primary_black"
                android:textSize="@dimen/font_primaryText" />

            <TextView
                android:id="@+id/journal_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/prompt_journal_title"
                android:textAllCaps="true"
                android:textSize="@dimen/font_secondaryText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/journal_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="#E9E9E9"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="4"
                android:scrollbars="vertical"
                android:textSize="@dimen/font_primaryText" />

            <TextView
                android:id="@+id/journal_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_journal_description"
                android:textSize="@dimen/font_secondaryText"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:paddingBottom="12dp" />

            <EditText
                android:id="@+id/journal_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E9E9E9"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical"
                android:textSize="@dimen/font_primaryText"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/journal_img_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/prompt_journal_img"
                android:textAllCaps="true"
                android:textSize="@dimen/font_secondaryText"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/journal_img_view"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="32dp"
                android:src="@drawable/journal_img"
                android:contentDescription="@string/prompt_journal_img"/>

            <Button
                android:id="@+id/journal_post_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/action_add_entry"
                android:textColor="@color/primary_white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>